# LINDO-The-Home-Assistant-Robot

./: LICENSE  README.md  Tags.txt
Chatbot Training Data/: agent.json
Chatbot Training Data/entities/: activity.json  activity_entries_en.json  addressEnt.json  addressEnt_entries_en.json  all.json  all_entries_en.json  color.json  color_entries_en.json  condition.json  condition_entries_en.json  device.json  device_entries_en.json  lights.json  lights_entries_en.json  outfit.json  outfit_entries_en.json  room.json  room_entries_en.json  search-engine.json  search-engine_entries_en.json  temperature.json  temperature_entries_en.json  time-zone.json  unit-temperature.json  unit-temperature_entries_en.json  unit-time.json  unit-time_entries_en.json  unit.json  unit_entries_en.json  weather-condition.json  weather-condition_entries_en.json
Chatbot Training Data/intents/: Calculate Adddition.json  Calculate Adddition_usersays_en.json  Calculate Division.json  Calculate Multiplication.json  (+258 more)
ROS & Teensy/: CMakeLists.txt  LICENSE  README.md  package.xml
ROS & Teensy/launch/: bringup.launch  goto.launch  minimal.launch  navigate.launch
ROS & Teensy/launch/include/: laser.launch
ROS & Teensy/launch/include/imu/: imu.launch
ROS & Teensy/launch/include/move_base/: move_base_mecanum.launch
ROS & Teensy/nodes/: goto.py
ROS & Teensy/param/: goto.corpus  goto.dic  goto.lm
ROS & Teensy/param/navigation/: costmap_common_params.yaml
ROS & Teensy/src/: lindo_base_node.cpp
ROS & Teensy/teensy/firmware/: platformio.ini
ROS & Teensy/teensy/firmware/src/: firmware.ino
(+76 files in other folders)
